@@ -1,3 +1,7 @@
+2003-05-23  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* stack.cpp: Warn if incident field not set.
+
 2003-04-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* camfr_wrap.cpp: Add various width() functions.
